static/styles/portico/portico_signin.css
/* ... */
#profile_info_section {
    #profile_avatar {
        border: 1px solid hsl(0, 0%, 80%);
        border-radius: 8px;
        width: 120px;
        height: 120px;
        margin: 0 auto 10px;
    }

    #profile_full_name {
        font-size: 1.2rem;
        font-weight: 400;
    }
}

#source_realm_select_section {
    position: relative;
    top: 15px;
    margin-bottom: 20px;
    font-size: 22px;
}

.goto-account-page {
    #realm_redirect_subdomain {
        text-align: right;
        position: relative;
        padding-right: 10px;
    }

    #realm_redirect_external_host {
        font-size: 20px;
        top: 13px;
        left: 5px;
        position: relative;
    }

    #realm_redirect_description {
        top: 15px;
        position: relative;
    }

    #enter-realm-button {
        margin-top: 14px;
    }
}

#choose_email {
    flex-direction: column;

    .white-box {
        min-width: 450px;
        padding: 30px 0 50px;
    }

    form {
        padding: 0;
        margin: 0;

        &.select-email-form:hover {
            background-color: hsl(202, 56%, 91%);
            cursor: pointer;

            i.fa {
                color: hsl(203, 63%, 76%);
            }
        }
    }

    .choose-email-box {
        padding: 13px 0;
        margin: 0 30px;
        border-bottom: 1px solid hsl(0, 0%, 95%);
        display: flex;
        align-items: center;

        p {
            margin: 0;
            font-size: 0.8em;

            &:last-child {
                line-height: 1.2em;
            }
        }

        .email {
            font-size: 0.95em;
            font-weight: 500;
        }

        img,
        i {
            width: 35px;
            height: 35px;
            margin-right: 10px;
            border-radius: 3px;
        }

        i.fa {
            color: hsl(0, 0%, 67%);
            text-align: center;
            line-height: 38px;

            &::before {
                font-size: 30px;
            }
        }
    }
}

/* -- media queries -- */

@media (width <= 950px) {
    .split-view .left-side {
        width: 400px;
    }
}

@media (width <= 850px) {
    .split-view .left-side {
        width: 350px;
    }
}

@media (width <= 815px) {
    .flex {
        min-height: calc(100vh - 530px);
    }
}

@media (width <= 795px) {
    .register-account #registration {
        padding: 10px;
    }

    .register-page-container,
    .login-page-container {
        width: 400px;
        text-align: center;
    }

    .split-view {
        .org-header {
            .avatar {
                width: 50px;
                height: 50px;
            }

            .info-box {
                margin-top: 0;

                .organization-path {
                    margin-top: 0;
                }
            }
        }

        .left-side,
        .right-side {
            display: block;
            margin: 0 auto !important;
            max-width: 100%;
        }

        .left-side + .right-side {
            border-left: none;
            padding: 0;
            margin: 0 auto;
        }

        .left-side {
            border: none;
            margin-right: 0;
            min-height: 0;
            margin-bottom: 20px;
            width: 324px;

            .description {
                margin: 20px 0;

                a {
                    color: hsl(200, 100%, 36%);
                }
            }
        }

        .right-side {
            width: 324px;
        }
    }
}

@media (width <= 500px) {
    .new-style .get-started {
        font-size: 1.6em;
    }

    .app-main.register-page-container,
    .app-main.login-page-container,
    .app-main.find-account-page-container,
    .app-main.goto-account-page-container,
    .app-main.forgot-password-container {
        display: inline-block;
        padding: 20px;
        width: calc(100% - 40px);
    }

    .forgot-password-container form {
        .input-box {
            text-align: center;
        }

        button {
            width: 328px;
        }
    }

    .white-box {
        box-shadow: none;
    }

    .account-creation {
        font-weight: 400;
    }

    .flex {
        /* the header becomes smaller, so comp for that. */
        min-height: calc(100vh - 505px);
    }
}

@media (width <= 400px) {
    .flex {
        min-height: calc(100vh - 560px);
    }
}

.account-creation .white-box .user_email {
    word-break: break-all;
}

@media (width >= 600px) {
    .account-creation .white-box {
        max-width: min-content;

        .alert-info {
            min-width: max-content;
        }
    }
}

